--- a/skills/permutations.html
+++ b/skills/permutations.html
@@ -28,7 +28,7 @@
                 <div class="process">
                     <p class="process-label">Permutation</p>
                     <p>Given a collection of \(n\) distinct objects, an ordered arrangement of these objects is called a permutation of the collection.</p>
-                    <p>n permute r, \(_nP_r = P(n,r) = {n! \over (n-r)!}\)</p>
+                    <p>\(n\) permute \(r\), \(_nP_r = P(n,r) = {n! \over (n-r)!}\)</p>
                 </div>
                 <div class="process">
                     <p class="process-label">"Permutation" with repetition</p>
