--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <body>
         <div id='header' include-html='header.html' src='js/index.js'></div>
         <script>includeHTML();</script>
-        <h1>About</h1>
+        <h1>zd;ogjnae;owjg</h1>
         <div class='content' style="display:flex;flex-flow:row wrap;justify-content:center;margin-top:20px;align-items:center; gap:25px">
             <h5 class='cards' style='margin: 0;max-width:400px;border:none;text-align:center;min-width:200px;font-weight:300'>Hello, my name is Brandon Schmitz. I'm a rising third-year Computer Science student at Georgia Tech. The goal of this site is to provide learning tools for various college courses.<br><br>It will always be free and ad-free&mdash;I'm of the opinion that education should not be tainted with pop-ups or pay-to-win crap, so I'll stay broke but at least the site doesn't suck. Thanks for checking it out!</h4>
             <figure style="margin:0">
