lots more courses & functions

--- a/skills/graph-coloring.html
+++ b/skills/graph-coloring.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graph Coloring & Chromatic Polynomials</title>
+    <title>Graph Coloring</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('areas', 'Graph Coloring & Chromatic Polynomials')">
+<body onload="writeOutline('areas', 'Graph Coloring')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -23,7 +23,7 @@
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         <div class="content">
-            <h1>Graph Coloring & Chromatic Polynomials</h1> 
+            <h1>Graph Coloring</h1> 
                 <!-- <div class="definition"> -->
                     <div class="process" id="rp">
                         <p class="process-label">Proper Coloring</p>
