--- a/skills/independence.html
+++ b/skills/independence.html
@@ -26,7 +26,7 @@
             <h1>Independence</h1> 
             <div class="process">
                 <p class="process-label">Independence of two events</p>
-                <p>The statement that two events are independent is logically equivalent to the following statements:</p>
+                <p>The statement that events \(A\) and \(B\) are independent is logically equivalent to the following statements:</p>
                 <ol>
                     <li>\(P(A|B) = P(A)\)</li>
                     <li>\(P(B|A) = P(B)\)</li>
