--- a/skills/randvars.html
+++ b/skills/randvars.html
@@ -42,6 +42,12 @@
                     <p class="process-label">Continuous Random Variables</p>
                     <p>A continuous random variable extends over a range (finite or infinite) of real numbers.</p>
                 </div>
+                <div class="process">
+                    <p class="process-label">Expected Values</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Variance</p>
+                </div>
         </div>
     </div>
     <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
