--- a/topics/areas.html
+++ b/topics/areas.html
@@ -24,7 +24,7 @@
         <p class='process-label'>Mathematics</p>
         <div class='cards' style="margin-bottom:0">
           <a class="card" id="u">Arithmetic</a>
-          <a class='card' href='discrete-math.html' id="u">Discrete Mathematics</a>
+          <a class='card' href='discrete-math.html'>Discrete Mathematics</a>
           <a class="card" id="u">Number Theory</a>
           <a class="card" id="u">Algebra I</a>
           <a class="card" id="u">Algebra II</a>
@@ -89,6 +89,12 @@
           <a class='card' id='u'>Visual Arts</a>
           <a class='card' id=''>Philosophy</a>
           <a class='card' id=''>Religion</a>
+        </div>
+      </div>
+      <div class="process">
+        <p class="process-label">Tests</p>
+        <div class="cards">
+          <a class="card" href="acept.html" >ACE Personal Trainer</a>
         </div>
       </div>
   </div>
