--- a/header.html
+++ b/header.html
@@ -10,19 +10,18 @@
             });
         </script>
     </head>
-    <!-- <div> -->
-        <div id="sidenav" class="sidenav">
-          <a href='/index.html' id="u">Dashboard</a>
-          <!-- <a href="/skills.html" id='u'>Skills</a> -->
-          <a href="/topics/areas.html">Areas of study</a>
-          <a href='/tutorials.html' id='u'>Tutorials</a>
-          <a href="/suggestions.html" id='u'>Suggestions</a>
-          <a href="/about.html">About</a>
-        </div>
-      
-        <!-- Use any element to open the sidenav -->
-        <span id='menu' onclick="openNav()">&#9776;</span>
-    <!-- </div> -->
+    <div id="sidenav" class="sidenav">
+        <a href='/index.html' id="u">Dashboard</a>
+        <!-- <a href="/skills.html" id='u'>Skills</a> -->
+        <a href="/topics/areas.html">Areas of study</a>
+        <a href="/topics/tests.html">Standardized Tests</a>
+        <a href='/tutorials.html'>Tutorials</a>
+        <a href="/suggestions.html" id='u'>Suggestions</a>
+        <a href="/about.html">About</a>
+    </div>
+    
+    <!-- Use any element to open the sidenav -->
+    <span id='menu'>&#9776;</span>
     <div class='header desktop-only'>
         <div></div>
         <a href='/index.html'>
