--- a/topics/physModern.html
+++ b/topics/physModern.html
@@ -4,29 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prime Numbers</title>
+    <title>Modern Physics</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
-    <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body onload="writeOutline('combinatorics', 'Prime Numbers')">
-    <div include-html='/header.html' src='/js/index.js'></div>
+<body  onload="setTopic('physModern'); writeOutline('area', 'Modern Physics')">
+    <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
-
-            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+            <span class='tab' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
-        <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         
-        <div class="content">
-            <h1>Prime Numbers</h1> 
-            <div style="height:350px"></div>
+        <div class="content" id="content">
 
         </div>
     </div>
-    <div include-html='/footer-nm.html' src='/js/index.js'></div>
+    <div id='footer' include-html='/footer.html' src='js/index.js'></div>
 </body>
 </html>
