--- a/skills/scientific-method.html
+++ b/skills/scientific-method.html
@@ -24,7 +24,7 @@
             <h1>Scientific Method</h1>
                 <div class="process">
                     <p class="process-label">Hypotheses, Theories, Laws</p>
-                    <p>hypothesis</p>
+                    <p>hypothesis like i hypothesize ur mom gae</p>
                     <p>theory</p>
                     <p>law</p>
                     <p>A <span class="k">theorem</span>, or axiom, is a law that is proven to be true for every possible case. It is impossible to definitively prove anything in the natural world, so theorems only exist in the formal sciences (mathematics, logic, etc.). </p>
