--- a/skills/histograms.html
+++ b/skills/histograms.html
@@ -29,7 +29,7 @@
                         <p class="process-label">Frequency Distribution</p>
                         <p>A <span class="k">frequency distribution</span> divides a dataset into intervals (called <span class="k">class intervals</span>, <span class="k">cells</span>, or <span class="k">bins</span>) and counts the number of data in each interval. </p>
                         <p>An interval's <span class="k">frequency</span> is the number of data in that interval.</p>
-                        <p>An interval's <span class="k">relative frequency</span> is its frequency divided the total number of observations.</p>
+                        <p>An interval's <span class="k">relative frequency</span> is its frequency divided by the total number of observations.</p>
                         <p>An interval's <span class="k">cumulative relative frequency</span> is the sum of its relative frequency and all relative frequencies of lower intervals. </p>
                     </div>
                     <!-- <div class="process example" id="rex">
@@ -38,7 +38,7 @@
                 </div> -->
                 <div class="process" id="rp">
                     <p class="process-label">Histogram</p>
-                    <p>A <span class="k">histogram</span> is just a graph of a frequency distribution. To construct a histogram, </p>
+                    <p>A <span class="k">histogram</span> is a graph of a frequency distribution. To construct a histogram, </p>
                     <ol>
                         <li>Label the intervals on the horizontal scale.</li>
                         <li>Label the vertical scale with frequencies or relative frequencies.</li>
