--- a/skills/scalars-vectors.html
+++ b/skills/scalars-vectors.html
@@ -29,6 +29,24 @@
                     <p>A <span class="k">scalar</span> is a quantity defined by a magnitude.</p>
                     <p>A <span class="k">vector</span> is a quantity with a magnitude and a direction.</p>
                 </div>
+                <div class="process">
+                    <p class="process-label">Vector Addition</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Vector Subtraction</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Vector &times; Scalar</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Dot Product</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Cross Product</p>
+                </div>
+                <div class="process">
+                    <p class="process-label">Right Hand Rule</p>
+                </div>
         </div>
     </div>
     <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
