--- a/skills/scientific-method.html
+++ b/skills/scientific-method.html
@@ -24,9 +24,10 @@
             <h1>Scientific Method</h1>
                 <div class="process">
                     <p class="process-label">Hypotheses, Theories, Laws</p>
-                    <p>hypothesis like i hypothesize ur mom gae</p>
-                    <p>theory</p>
-                    <p>law</p>
+                    <p>A scientific <span class="k">fact</span> is a simple observation in the natural world. </p>
+                    <p>A <span class="k">hypothesis</span> is a proposed explanation of specific observations that can be tested with experiments. </p>
+                    <p>A scientific <span class="k">theory</span> is a general conclusion supported by a large body of evidence that explains <i>why</i> or <i>how</i> some natural phenomenon works. </p>
+                    <p>A scientific <span class="k">law</span> is a statement, supported by a large body of evidence, about a relationship between facts. It predicts <i>what</i> will happen, but does not explain why or how. </p>
                     <p>A <span class="k">theorem</span>, or axiom, is a law that is proven to be true for every possible case. It is impossible to definitively prove anything in the natural world, so theorems only exist in the formal sciences (mathematics, logic, etc.). </p>
                 </div> 
                 <div class="process">
@@ -34,7 +35,7 @@
                     <ol>
                         <li>Make an observation or ask a question.</li>
                         <li>Research areas of interest.</li>
-                        <li>Form a hypothesis&mdash;an explanation of observations that can be tested.</li>
+                        <li>Form a hypothesis from observations, research, and assumptions.</li>
                         <li>Test the hypothesis by performing repeated experiments.</li>
                         <li>Analyze the data from the experiments and form conclusions.</li>
                         <li>Repeat.</li>
