--- a/topics/discrete-math.html
+++ b/topics/discrete-math.html
@@ -4,49 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discrete Mathetmatics</title>
-    <link rel='icon' href='/imgs/sl-logo.PNG'>
+    <title>Discrete Mathematics</title>
+    <link rel='icon' href='/imgs/sl-logo.png'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
 </head>
-<body>
+<body  onload="setTopic('discrete-math'); writeOutline('area', 'Discrete Mathematics')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
-    <h1>Discrete Mathematics</h1>
-    <div class='content'>
-        <p class='cards-label'>Logic</p>
-        <div class='cards formsci'>
-            <a class='card' href='/skills/props-logic.html'>Propositions & Logic Operators</a>
+    <div class="content-container">
+        <div class="desktop-only skills" id="skills">
+            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
-        <p class='cards-label'>Proofs</p>
-        <div class='cards formsci'>
+        <script type="text/javascript" src="/js/outlines.js"></script>
+        
+        <div class="content" id="content">
 
         </div>
-        <p class='cards-label'>Sets</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Functions</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Boolean Algebra</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Relations & Digraphs</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Computation</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Induction & Recursion</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Integer Properties</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Introduction to Counting</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Advanced Counting</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Discrete Probability</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Graphs</p>
-        <div class='cards formsci'></div>
-        <p class='cards-label'>Trees</p>
-        <div class='cards formsci'></div>
     </div>
-    <div include-html='/footer.html' src='/js/index.js'></div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>
 </body>
 </html>
