--- a/skills/num-sums-data.html
+++ b/skills/num-sums-data.html
@@ -27,7 +27,7 @@
                 <!-- <div class="definition"> -->
                     <div class="process" id="rp">
                         <p class="process-label">Sample Mean</p>
-                        <p>Given \(n\) observations in a sample denoted \(x_1, x_2, ..., x_n\), the <span class="k">sample mean</span> (average) is $$\bar{x} = {\sum_{i=1}^n{x_i} \over n} = {x_1 + x_2 + ... + x_n \over n} $$ </p>
+                        <p>Given \(n\) observations in a sample denoted \(x_1, x_2, ..., x_n,\) the <span class="k">sample mean</span> (average) is $$\bar{x} = {\sum_{i=1}^n{x_i} \over n} = {x_1 + x_2 + ... + x_n \over n} $$ </p>
                     </div>
                     <!-- <div class="process example" id="rex">
                         <p>The fibonacci sequence is defined as $$f(0) = f(1) = 1$$ $$f(n) = f(n-1) + f(n-2) \text{ for } n \geq 2$$</p>
