--- a/skills/num-sums-data.html
+++ b/skills/num-sums-data.html
@@ -35,7 +35,7 @@
                 </div> -->
                 <div class="process" id="rp">
                     <p class="process-label">Quartiles</p>
-                    <p>A dataset has three <span class="k">quartiles</span> which partition it into four equal segments:</p>
+                    <p>A dataset of size \(n\) has three <span class="k">quartiles</span> which partition it into four equal segments:</p>
                         <ol>
                             <li>First quartile (lower quartile), \(q_1 = {n+1 \over 4}\), greater than \(25\)% of the data.</li>
                             <li>Second quartile (<span class="k">median</span>), \(q_2 = {n+1 \over 2}\), greater than \(50\)% of the data. </li>
