--- a/skills/scientific-method.html
+++ b/skills/scientific-method.html
@@ -46,7 +46,7 @@
                     <p>Experiments are designed to test a hypothesis by adjusting one variable (leaving everything else constant) and observing the effects.</p>
                     <p>The <span class="k">independent variable</span> is the factor manipulated by the researchers to elicit some response. </p>
                     <p><span class="k">Dependent variables</span> are the factors affected by the independent variable and measured by the researchers. </p>
-                    <p>An <span class="k">experimental group</span> is a group (of animals, objects, etc.) in which the researchers observe the effects the independent variable. </p>
+                    <p>An <span class="k">experimental group</span> is a group (of animals, objects, etc.) in which the researchers observe the effects of the independent variable. </p>
                     <p>A <span class="k">control group</span> is often used next to an experimental group. The researchers do nothing to this group, to see how much change in the dependent variable can be attributed to other factors. </p>
                 </div>
                 <div class="process">
