--- a/topics/chemistry.html
+++ b/topics/chemistry.html
@@ -10,15 +10,13 @@
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body  onload="setTopic('chemistry'); writeOutline('area', 'General Chemistry')">
+<body  onload="setTopic('chemistry'); writeOutline('area', 'Chemistry')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
-
             <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
-        <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         
         <div class="content" id="content">
