--- a/skills/chem-rxns.html
+++ b/skills/chem-rxns.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biology</title>
+    <title>Chemical Reactions</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
+    <script type="text/javascript" src="/js/outlines.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body  onload="setTopic('biology'); writeOutline('area', 'Biology')">
+<body onload="writeOutline('areas', 'Chemical Reactions')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -17,11 +20,13 @@
             <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
         <script type="text/javascript" src="/js/outlines.js"></script>
-        
-        <div class="content" id="content">
-
+        <div class="content">
+            <h1>Chemical Reactions</h1>
+                <div class="process">
+                    <p class="process-label"></p>
+                </div> 
         </div>
     </div>
-    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
 </body>
 </html>
